--- a/lab2/makefile
+++ b/lab2/makefile
@@ -3,7 +3,7 @@
 # Dylan Brown
 
 lab2: lab2.o
-	gcc -o lab2 lab2.o
+	gcc -o lab2 lab2.o -lpthread -lrt
 
 lab2.o: lab2.c buffer.h
 	gcc -c -Wall lab2.c buffer.h -lpthread -lrt
